--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,23 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+debug = true
+
+[profile.bench]
+debug = true
+
 [dependencies]
 anyhow = "1.0.75"
 proptest = "1.4.0"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "range"
+harness = false
+
+[[bench]]
+name = "day3"
+harness = false
